# SDE-Interview-Prep

./: LICENSE  README.md  package-lock.json  package.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CS Subjects/: README.md
Competitive Programming/: CMakeLists.txt  balanced brackets.py  heap deletion.cpp  heap insertion.cpp  linear_search.py
Competitive Programming/Array/: Best Time to Buy and Sell Stock.py  Count pairs with given sum.py  Factorials of large numbers.py  Find All Duplicates in an Array.py  Find the triplet that sum to a given value.py  First Missing Positive.py  Given an array of size n and a number k, find all elements that appear more than n or k times.cpp  K’th Smallest or Largest Element in Unsorted Array.py  Longest consecutive subsequence.cpp  Maximum and minimum of an array using minimum number of comparisons.py  Maximum profit by buying and selling a share at most twice.cpp  Maximum profit by buying and selling a share at most twice.py  Median of 2 sorted arrays of equal size.cpp  Minimise the maximum difference between heights.py  Minimize the maximum difference between the heights.cpp  Minimum number of operations required to make an array palindrome.py  Minimum swaps required bring elements less equal K together.py  Missing Number.cpp  Move all negative numbers to beginning and positive to end with constant extra space.cpp  Next Permutation.py  Subarray with 0 sum.cpp  (+9 more)
LeetCode/: README.md
Programming/: 12 Week Programme - Leetcode.docx  DSA Sheet by Arsh (45 Days Plan) - Google Drive.html  FINAL450.xlsx  Programming Sheet.xlsx  Revision_of_Blind_75_Questions_Shashank_1663097124.xlsx  ~$FINAL450.xlsx
Programming/C++/04.VariablesAndDatatypes/4.4IntegerModifiers/: CMakeLists.txt
Programming/C++/36.Inheritance/36.5BaseClassAccessSpecifiersADemo/: CMakeLists.txt
Programming/C++/37.Polymorphism/37.10Final/: CMakeLists.txt
Programming/C++/37.Polymorphism/37.20AbstractClassesAsInterfaces/: CMakeLists.txt
Programming/C++/37.Polymorphism/37.8PolymorphismAtDifferentLevels/: CMakeLists.txt
System Design/:  Implement Queue using Stacks.py  Binary Search Tree Iterator II.py  Design Browser History.py  Design Front Middle Back Queue.py  Design Parking System.cpp  Design Phone Directory.py  Design a File Sharing System.py  Finding MK Average.cpp  Implement Stack using Queues.py  Iterator for Combination.cpp  Kth Ancestor of a Tree Node.py  Product of the Last K Numbers.cpp
competitive-programming/: avl delete.cpp  avl insertion.cpp  avl search.cpp  balanced brackets.cpp  test.py
(+1239 files in other folders)
